partup-tile: stop tags from collapsing

--- a/app/client/stylesheets/components/pu-partuptile.sass
+++ b/app/client/stylesheets/components/pu-partuptile.sass
@@ -38,12 +38,15 @@
         pointer-events: none
 
         li
-            // display: inline-block
+            display: block
             margin: 10px 0 0
-            padding: 3px 12px
-            background: $color-border-light
             transform: translateX(-100%)
             transition: transform .2s ease-out
+
+        span
+            display: inline-block
+            padding: 3px 12px
+            background: $color-border-light
 
     .pu-partupcircle
         margin-bottom: 20px - 4px
